# psmux

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  Cargo.toml  README.md  psmux.json
.cargo/: config.toml
.github/: ASSETS.md
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  faq.md  features.md  keybindings.md  scripting.md  tmux_args_reference.md
examples/: key_test.rs  latency_harness.rs
scoop/: psmux.json
scripts/: install.ps1  psmux-ssh.ps1  psmux-ssh.sh  publish-choco.ps1
src/: app.rs  cli.rs  client.rs  commands.rs  config.rs  copy_mode.rs  format.rs  help.rs  input.rs  layout.rs  main.rs  pane.rs  pipe.rs  platform.rs  rendering.rs  server.rs  session.rs  ssh_input.rs  style.rs  tree.rs  types.rs  util.rs  window_ops.rs
src/server/: connection.rs  helpers.rs  mod.rs  options.rs
tests/: destructive_test.ps1  run_all_tests.ps1  run_fmt_test.ps1  test_advanced.ps1  test_all.ps1  test_all.sh  test_bind_key.ps1  test_bind_pipe_key.ps1  test_bug_detection.ps1  test_bugfixes.ps1  test_config.ps1  test_copy_mode_advanced.ps1  test_copy_mode_full.ps1  test_features3.ps1  test_features4.ps1  test_features5.ps1  test_format_engine.ps1  test_format_vars.ps1  test_github_issues.ps1  test_github_issues_all.ps1  test_issue19_config.ps1  test_issue25.ps1  test_issue36.ps1  test_issue41_btab.ps1  test_issue42_version.ps1  test_issue43_copy_pane_local.ps1  test_issue43_prefix_o_l.ps1  test_issue44_zoom_buffer.ps1  test_issue45_unzoom_cursor.ps1  test_issue46_zoom_nav_desync.ps1  test_issue47_bare_run.ps1  test_keybinding_options.ps1  test_kill_server.ps1  test_layout_engine.ps1  test_new_parity_features.ps1  test_newsession_flags.ps1  test_pane_startup_perf.ps1  test_perf.ps1  test_plugins_themes.ps1  test_pr27.ps1  (+12 more)
